# shotpeeningML

./: .gitignore  LICENSE  README.md  Shotpeen_Gui.py  pyproject.toml  requirements.txt  shotpeen_gui.py
.github/workflows/: .coveragerc  pylint.yml  test_code.yml
blueprint/: Components.md  Describing_a_usecase.md  User_story.md
dataset_sample/: dataset2_sample.rar  readme.txt.txt
src/: data_viz.py  dataset1_script.py  dataset2_script.py
src/ShotPeenWithML/: data_viz.py  dataset1_script.py  dataset2_script.py  jiachen_v2.ipynb  model.py
src/peen-ml/: data_viz.py  dataset1_script.py  dataset2_script.py  model.py  model_gui_test_case.py  model_notebook_v3.ipynb
test_simulations/Simulation_0/: displacements.npy
test_simulations/Simulation_1/: checkerboard.npy  displacements.npy
test_simulations_edge/Simulation_0/: checkerboard.npy
tests/: test_Shotpeen_Gui.py  test_data_viz.py  test_model.py  test_shotpeen_gui.py
tests/simulation_0/: Checkerboard_0.cae  Checkerboard_0.jnl  Checkerboard_0.odb  checkerboard.csv  checkerboard.npy  displacements.csv  displacements.npy  stresses.csv  stresses.npy
tests/simulation_1/: Checkerboard_1.cae  Checkerboard_1.jnl  Checkerboard_1.odb  checkerboard.csv  checkerboard.npy  displacements.csv  displacements.npy  node_coords.csv  stress_element_labels.npy  stresses.csv  stresses.npy
tests/test_simulations/Simulation_0/: checkerboard.npy  displacements.npy
tests/test_simulations/Simulation_1/: checkerboard.npy  displacements.npy
tests/test_simulations_edge/Simulation_0/: checkerboard.npy
(+292 files in other folders)
