# pyproject.toml

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CSE583_ShotPeenWithML"
version = "0.1.0"
description = "Machine learning solution to predict deformation from shot peening as an alternative to dynamic simulation. Training on simulated shot peen effects, residual strain models, and empirical datasets will allow for a faster way to approximate the effect of shot peening."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Onest Rexhepi", email = "onestr@uw.edu" },
    { name = "Harshavardhan Sameer Raje", email = "harshr@uw.edu" },
    { name = "Jiachen Zhong", email = "jczhong@uw.edu" },
    { name = "Xuanyu Shen", email = "xshen20@uw.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "torch>=1.9.0"
]
requires-python = ">=3.7"


[project.urls]
homepage = "https://github.com/onestr1/CSE583_ShotPeenWithML"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "CSE583_ShotPeenWithML.__version__" }
